update full website

--- a/about.html
+++ b/about.html
@@ -241,7 +241,7 @@
                 data-wow-delay="400ms"
               >
                 <img
-                  src="assets/img/team-working-startup-project_53876-31582.jpg"
+                  src="assets/img/banner-img/Untitled design (8) (1)-min.png"
                   alt=""
                 />
                 <!-- <a href="#">Discover More</a> -->
@@ -255,7 +255,7 @@
             <div class="about-right-wrap">
               <div class="about-right-img">
                 <img
-                  src="assets/img/new-img/young-businessman-working-from-his-office-concept-hard-work-failure.jpg"
+                  src="assets/img/banner-img/Untitled design (9).png"
                   alt=""
                 />
               </div>
@@ -319,7 +319,7 @@
           >
             <div class="single-team-wrap">
               <div class="team-thumb">
-                <img src="assets/img/d1.png" alt="" />
+                <img src="assets/img/banner-img/cool-guy-sitting-chair-look-up (1)-min.png" alt="" />
               </div>
               <div class="team-details">
                 <h4>Debra</h4>
@@ -340,7 +340,7 @@
           >
             <div class="single-team-wrap">
               <div class="team-thumb">
-                <img src="assets/img/d9.png" alt="" />
+                <img src="assets/img/banner-img/cool-guy-sitting-chair-look-up (1)-min.png" alt="" />
               </div>
               <div class="team-details">
                 <h4>D.A Fan</h4>
@@ -361,7 +361,7 @@
           >
             <div class="single-team-wrap">
               <div class="team-thumb">
-                <img src="assets/img/d8.png" alt="" />
+                <img src="assets/img/banner-img/cool-guy-sitting-chair-look-up (1)-min.png" alt="" />
               </div>
               <div class="team-details">
                 <h4>Rio</h4>
@@ -382,7 +382,7 @@
           >
             <div class="single-team-wrap">
               <div class="team-thumb">
-                <img src="assets/img/d9.png" alt="" />
+                <img src="assets/img/banner-img/cool-guy-sitting-chair-look-up (1)-min.png" alt="" />
               </div>
               <div class="team-details">
                 <h4>Loraine R.</h4>
@@ -403,7 +403,7 @@
           >
             <div class="single-team-wrap">
               <div class="team-thumb">
-                <img src="assets/img/d1.png" alt="" />
+                <img src="assets/img/banner-img/cool-guy-sitting-chair-look-up (1)-min.png" alt="" />
               </div>
               <div class="team-details">
                 <h4>Carlos L.</h4>
@@ -424,7 +424,7 @@
           >
             <div class="single-team-wrap">
               <div class="team-thumb">
-                <img src="assets/img/d8.png" alt="" />
+                <img src="assets/img/banner-img/cool-guy-sitting-chair-look-up (1)-min.png" alt="" />
               </div>
               <div class="team-details">
                 <h4>John doe</h4>
@@ -452,7 +452,7 @@
             <h5 class="text-white">
               Meet our people. See our work. Join our team.
             </h5>
-            <a href="#contact" class="main-btn">Contact With Us</a>
+            <a href="#contact" class="main-btn">Contact Us</a>
           </div>
         </div>
       </div>
@@ -477,7 +477,7 @@
             <div class="footer-widget">
               <div class="logo">
                 <a class="navbar-brand" href="#home"
-                  ><img src="assets/img/LogoBlack.png" alt=""
+                  ><img src="assets/img/LogoWhite.png" alt=""
                 /></a>
               </div>
             </div>
@@ -583,15 +583,15 @@
           >
             <div class="social-link">
               <a href="https://www.facebook.com/aitstax/"
-                ><img src="assets/img/facebook.png" /> Facebook</a
+                ><img src="assets/img/output-onlinepngtoolsfacebook.png" /> Facebook</a
               >
 
               <a href="https://www.twitter.com/aitstax/"
-                ><img src="assets/img/twitters.png" /> Twitter</a
+                ><img src="assets/img/output-onlinepngtoolstwitter.png" /> Twitter</a
               >
 
               <a href="https://www.instagram.com/aitstax/"
-                ><img src="assets/img/instagrams.png" /> Instagram</a
+                ><img src="assets/img/output-onlinepngtoolsinstagram.png" /> Instagram</a
               >
             </div>
           </div>
