--- a/index1.html
+++ b/index1.html
@@ -53,7 +53,7 @@
                     <div class="header-inner-box">
                         <div class="logo">
                             <a class="navbar-brand" href="#home">
-                                <img src="assets/img/LogoBlack.png" alt="">
+                                <img src="assets/img/LogoWhite.png" alt="">
                             </a>
                         </div>
                         <div class="main-menu">
@@ -151,13 +151,14 @@
                     <div class="banner-slider" data-aos="fade-down" data-aos-duration="2000">
                         <div class="slider slider-for">
                             <div>
-                                <img src="assets/img/d1.png">
+                                <img src="assets/img/banner-img/portrait-female-teacher-holding-yellow-files-pencil-green-min-removebg-preview.png">
+                            </div>
+                            
+                            <div>
+                                <img src="assets/img/banner-img/workman-with-his-arms-crossed-white-background-min-removebg-preview.png">
                             </div>
                             <div>
-                                <img src="assets/img/d8.png">
-                            </div>
-                            <div>
-                                <img src="assets/img/d9.png">
+                                <img src="assets/img/banner-img/police_officer-removebg-preview.png">
                             </div>
                         </div>
                     </div>
@@ -171,7 +172,7 @@
                 <div class="col-xl-6 col-lg-6 col-12 wow fadeInLeft   animated" data-wow-delay="200ms"
                     style="visibility: visible; animation-delay: 200ms; animation-name: fadeInLeft;">
                     <div class="process-bg"
-                        style="background-image: url(assets/img/new-img/financial-managers-working-report_1098-21749.jpg);">
+                        style="background-image: url(assets/img/banner-img/arrangement-with-devices-copy-space\ \(1\).jpg);">
                     </div>
                 </div>
                 <div class="col-xl-6 col-lg-6 col-12 wow fadeInUp animated" data-wow-delay="200ms"
@@ -189,7 +190,7 @@
                                         data-bs-toggle="collapse" data-bs-target="#collapse1" aria-expanded="false"
                                         aria-controls="collapse1">
                                         <div class="feature-icon">
-                                            <img src="assets/img/new-img/output-onlinepngtools (4).png">
+                                            <img src="assets/img/banner-img/output-onlinepngtools (1).png">
                                         </div>
                                         Bookkeeping
                                     </button>
@@ -212,7 +213,7 @@
                                     <button class="btn btn-link" type="button" data-bs-toggle="collapse"
                                         data-bs-target="#collapse2" aria-expanded="false" aria-controls="collapse2">
                                         <div class="feature-icon">
-                                            <img src="assets/img/new-img/output-onlinepngtools (1).png">
+                                            <img src="assets/img/banner-img/output-onlinepngtools.png">
                                         </div>
                                         Accounting
                                     </button>
@@ -236,7 +237,7 @@
                                     <button class="btn btn-link" type="button" data-bs-toggle="collapse"
                                         data-bs-target="#collapse3" aria-expanded="false" aria-controls="collapse3">
                                         <div class="feature-icon">
-                                            <img src="assets/img/new-img/output-onlinepngtools (3).png">
+                                            <img src="assets/img/banner-img/output-onlinepngtools (2).png">
                                         </div>
                                         Taxes
                                     </button>
@@ -265,15 +266,15 @@
     <section id="about">
         <div class="about-section white-bg section-padding pt-0">
             <div class="container">
-                <div class="row" data-aos="fade-right" data-aos-offset="300" data-aos-easing="ease-in-sine"
-                    data-aos-duration="2500">
+                <div class="row row-reverse" data-aos="fade-right" data-aos-offset="300" data-aos-easing="ease-in-sine"
+                    data-aos-duration="2200">
                     <div class="col-xl-6 col-lg-6 col-12 wow fadeInLeft  animated" data-wow-delay="100ms"
                         style="visibility: visible; animation-delay: 100ms; animation-name: fadeInLeft;">
                         <div class="about-bg-one"
-                            style="background-image: url(assets/img/new-img/couple-making-deal-about-their-new-house\ \(1\).jpg);">
-                            <div class="about-tag-title">
+                            style="background-image: url(assets/img/banner-img/businesspeople-shaking-hands-workplace\ \(1\).jpg);">
+                            <!-- <div class="about-tag-title">
                                 <h4>Advice on optimizing retirement contributions.</h4>
-                            </div>
+                            </div> -->
                         </div>
                     </div>
                     <div class="col-xl-6 col-lg-6 col-12 wow fadeInUp  animated" data-wow-delay="200ms"
@@ -313,8 +314,8 @@
                         </div>
                     </div>
                 </div>
-                <div class="row down-about" data-aos="fade-left" data-aos-offset="300" data-aos-easing="ease-in-sine"
-                    data-aos-duration="2500">
+                <div class="row down-about row-reverse" data-aos="fade-left" data-aos-offset="300" data-aos-easing="ease-in-sine"
+                    data-aos-duration="2200">
                     <div class="col-xl-6 col-lg-6 col-12 text-end wow fadeInUp  animated" data-wow-delay="100ms"
                         data-aos="fade-right" data-aos-anchor="#example-anchor" data-aos-offset="500"
                         data-aos-duration="500"
@@ -341,13 +342,13 @@
                     </div>
                     <div class="col-xl-6 col-lg-6 col-12 wow fadeInRight  animated" data-wow-delay="200ms"
                         data-aos="fade-right" data-aos-offset="300" data-aos-easing="ease-in-sine"
-                        data-aos-duration="2000"
+                        data-aos-duration="1800"
                         style="visibility: visible; animation-delay: 200ms; animation-name: fadeInRight;">
                         <div class="about-bg-two"
-                            style="background-image: url(assets/img/new-img/business-person-looking-finance-graphs\ \(1\).jpg);">
-                            <div class="about-tag-title">
+                            style="background-image: url(assets/img/banner-img/ivana-cajina-dnL6ZIpht2s-unsplash-min\ \(1\).jpg);">
+                            <!-- <div class="about-tag-title">
                                 <h4>99.9% Customer Satisfaction</h4>
-                            </div>
+                            </div> -->
                         </div>
                     </div>
                 </div>
@@ -357,7 +358,7 @@
     </section>
     <!-- About Section  -->
     <!-- blog -->
-    <section id="blog" data-aos="fade-up" data-aos-anchor-placement="center-center">
+    <section id="blog" >
         <div class="about-section white-bg section-padding pt-0">
             <div class="container">
                 <div class="row">
@@ -369,10 +370,10 @@
                     <div class="col-xl-6 col-lg-6 col-12 wow fadeInLeft  animated" data-wow-delay="100ms"
                         style="visibility: visible; animation-delay: 100ms; animation-name: fadeInLeft;">
                         <div class="about-bg-one blog-image-1"
-                            style="background-image: url(assets/img/young-business-people-office-working-with-tablet_23-2149206515.jpg);">
-                            <div class="about-tag-title">
+                            style="background-image: url(assets/img/banner-img/young-girl-showing-thumbs-up-hand-sign\ \(1\).jpg);">
+                            <!-- <div class="about-tag-title">
                                 <h4>Earned Income Tax Credit (EITC)</h4>
-                            </div>
+                            </div> -->
                         </div>
                         <a class="list-blog blog-list" href="/blog2.html">View all Blogs</a>
                     </div>
@@ -383,12 +384,11 @@
     </section>
     <!-- blog end        -->
     <!-- resource -->
-    <section id="resource" data-aos="fade-left" data-aos-easing="linear" data-aos-duration="2000">
+    <section id="resource" data-aos="fade-left" data-aos-easing="linear" data-aos-duration="1500">
         <div class="process-section section-padding pt-0">
             <div class="container">
                 <div class="row">
-                    <div class="col-xl-8 col-lg-8 text-center mx-auto" data-aos="fade-down" data-aos-offset="300"
-                        data-aos-easing="ease-in-sine" data-aos-duration="2000">
+                    <div class="col-xl-8 col-lg-8 text-center mx-auto" >
                         <div class="section-title">
                             <p>Resources</p>
                         </div>
@@ -400,10 +400,10 @@
                         <div class="row">
                             <div class="col-lg-12">
                                 <div class="process-bg"
-                                    style="background-image: url(assets/img/new-img/tax-return-financial-form-concept\ \(1\).jpg);">
-                                    <div class="process-tag-title">
+                                    style="background-image: url(assets/img/banner-img/Untitled\ design\ \(9\).png);">
+                                    <!-- <div class="process-tag-title">
                                         <h4>Comprehensive guide for personal tax filing and strategies</h4>
-                                    </div>
+                                    </div> -->
                                 </div>
                             </div>
                         </div>
@@ -418,7 +418,7 @@
                                             data-bs-toggle="collapse" data-bs-target="#collapse1" aria-expanded="false"
                                             aria-controls="collapse1">
                                             <div class="feature-icon">
-                                                <img src="assets/img/new-img/output-onlinepngtools (2).png">
+                                                <img src="assets/img/banner-img/handmoney.png">
                                             </div>
                                             Check your Tax Return refund status
                                         </button>
@@ -447,7 +447,7 @@
                                         <button class="btn btn-link" type="button" data-bs-toggle="collapse"
                                             data-bs-target="#collapse2" aria-expanded="false" aria-controls="collapse2">
                                             <div class="feature-icon">
-                                                <img src="assets/img/new-img/output-onlinepngtools.png">
+                                                <img src="assets/img/banner-img/checkbottom.png">
                                             </div>
                                             Make a tax payment
                                         </button>
@@ -476,7 +476,7 @@
                                         <button class="btn btn-link" type="button" data-bs-toggle="collapse"
                                             data-bs-target="#collapse3" aria-expanded="false" aria-controls="collapse3">
                                             <div class="feature-icon">
-                                                <img src="assets/img/new-img/output-onlinepngtoolreturn.png">
+                                                <img src="assets/img/banner-img/emailbox.png">
                                             </div>
                                             Check your amended return status
                                         </button>
@@ -502,7 +502,7 @@
                                         <button class="btn btn-link" type="button" data-bs-toggle="collapse"
                                             data-bs-target="#collapse4" aria-expanded="false" aria-controls="collapse4">
                                             <div class="feature-icon">
-                                                <img src="assets/img/new-img/output-onlinepngtools (2).png">
+                                                <img src="assets/img/banner-img/handmoney.png">
                                             </div>
                                             Where's my Stimulus
                                         </button>
@@ -531,8 +531,7 @@
     <!-- resources end -->
     <!-- client -->
     <section id="client">
-        <div class="faq-section faq-two  section-padding pt-0" data-aos="fade-up"
-            data-aos-anchor-placement="center-center">
+        <div class="faq-section faq-two  section-padding pt-0" >
             <div class="container">
                 <div class="row">
                     <div class="col-xl-12 col-lg-12 col-md-12 col-12 mx-auto wow fadeInUp animated"
@@ -550,19 +549,19 @@
                             <div class="contact-form-inner up-contact">
                                 <form action="#">
                                     <div class="row">
-                                        <div class="col-lg-4 col-12">
+                                        <div class="col-lg-6 col-12">
                                             <input type="text" placeholder="First Name">
                                         </div>
-                                        <div class="col-lg-4 col-12">
+                                        <div class="col-lg-6 col-12">
                                             <input type="text" placeholder="Last Name">
                                         </div>
-                                        <div class="col-lg-4 col-12">
+                                        <div class="col-lg-6 col-12">
                                             <input type="email" placeholder="Email">
                                         </div>
-                                        <div class="col-lg-4 col-12">
+                                        <div class="col-lg-6 col-12">
                                             <input type="text" placeholder="Phone Number">
                                         </div>
-                                        <div class="col-lg-4 col-12">
+                                        <div class="col-lg-12 col-12">
                                             <input type="submit" value="Request Account" class="input-btn">
                                         </div>
                                     </div>
@@ -578,17 +577,17 @@
     <!-- client end -->
     <!-- schedule -->
     <section id="schedule" data-aos="fade-up" data-aos-offset="300" data-aos-easing="ease-in-sine"
-        data-aos-duration="2500">
+        data-aos-duration="2000">
         <div class="process-section section-padding mb-60 pb-0 schedule-section pt-0">
             <div class="container">
                 <div class="row">
                     <div class="col-xl-6 col-lg-6 col-12 wow fadeInLeft  animated" data-wow-delay="200ms"
                         style="visibility: visible; animation-delay: 200ms; animation-name: fadeInLeft;">
                         <div class="process-bg"
-                            style="background-image: url(assets/img/new-img/meetingSchedule.webp);">
-                            <div class="process-tag-title">
+                            style="background-image: url(assets/img/banner-img/arrangement-finances-elements-with-empty-smartphone_23-2148793741.png);">
+                            <!-- <div class="process-tag-title">
                                 <h4>Walk-ins are welcome, but availability is not guaranteed.</h4>
-                            </div>
+                            </div> -->
                         </div>
                     </div>
                     <div class="col-xl-6 col-lg-6 col-12 wow fadeInUp  animated" data-wow-delay="400ms"
@@ -720,7 +719,7 @@
                     <div class="footer-widget">
                         <div class="logo">
                             <a class="navbar-brand" href="#home">
-                                <img src="assets/img/LogoBlack.png" alt="">
+                                <img src="assets/img/LogoWhite.png" alt="">
                             </a>
                         </div>
                     </div>
@@ -805,13 +804,13 @@
                 <div class="consulting-social-link-wrap dark-green-bg justify-content-center">
                     <div class="social-link ">
                         <a href="https://www.facebook.com/aitstax/">
-                            <img src="assets/img/facebook.png"> Facebook
+                            <img src="assets/img/output-onlinepngtoolsfacebook.png"> Facebook
                         </a>
                         <a href="https://www.twitter.com/aitstax/">
-                            <img src="assets/img/twitters.png"> Twitter
+                            <img src="assets/img/output-onlinepngtoolstwitter.png"> Twitter
                         </a>
                         <a href="https://www.instagram.com/aitstax/">
-                            <img src="assets/img/instagrams.png"> Instagram
+                            <img src="assets/img/output-onlinepngtoolsinstagram.png"> Instagram
                         </a>
                     </div>
                 </div>
