new changes add in website

--- a/blog1.html
+++ b/blog1.html
@@ -259,7 +259,7 @@
 
                     <div class="header-top-link text-center">
 
-                        <h4 class="text-white"> Associate Income Tax <a href="#contact">Contact Us</a></h4>
+                        <h4 class="text-white"> Associate Income Tax <a href="/index1.html#contact">Contact Us</a></h4>
 
                     </div>
 
@@ -481,11 +481,14 @@
 
                     <div class="social-link ">
 
-                        <a href="https://www.facebook.com/aitstax/"><img src="assets/img/facebook.png"> Facebook</a>
+                        <a href="https://www.facebook.com/aitstax/"><img
+                                src="assets/img/output-onlinepngtoolsfacebook.png"> Facebook</a>
 
-                        <a href="https://www.twitter.com/aitstax/"><img src="assets/img/twitters.png"> Twitter</a>
+                        <a href="https://www.twitter.com/aitstax/"><img
+                                src="assets/img/output-onlinepngtoolstwitter.png"> Twitter</a>
 
-                        <a href="https://www.instagram.com/aitstax/"><img src="assets/img/instagrams.png"> Instagram</a>
+                        <a href="https://www.instagram.com/aitstax/"><img
+                                src="assets/img/output-onlinepngtoolsinstagram.png"> Instagram</a>
 
 
 
