--- a/about.html
+++ b/about.html
@@ -170,7 +170,7 @@
           <div class="col-xl-6 col-lg-5 mx-auto">
             <div class="header-top-link text-center">
               <h4 class="text-white">
-                Associated Income Tax Services <a href="#contact">Contact Us</a>
+                Associated Income Tax Services <a href="/index1.html#contact">Contact Us</a>
               </h4>
             </div>
           </div>
@@ -452,7 +452,7 @@
             <h5 class="text-white">
               Meet our people. See our work. Join our team.
             </h5>
-            <a href="#contact" class="main-btn">Contact Us</a>
+            <a href="/index1.html#contact" class="main-btn">Contact Us</a>
           </div>
         </div>
       </div>
@@ -501,22 +501,22 @@
                     <ul>
                       <li>
                         <i class="las la-check-circle"></i
-                        ><a href="#home">Home</a>
+                        ><a href="/index1.html#home">Home</a>
                       </li>
 
                       <li>
                         <i class="las la-check-circle"></i
-                        ><a href="#about">About Us</a>
+                        ><a href="/index1.html#about">About Us</a>
                       </li>
 
                       <li>
                         <i class="las la-check-circle"></i
-                        ><a href="#blog">News</a>
+                        ><a href="/index1.html#blog">News</a>
                       </li>
 
                       <li>
                         <i class="las la-check-circle"></i
-                        ><a href="#resource">Resources</a>
+                        ><a href="/index1.html#resource">Resources</a>
                       </li>
                     </ul>
                   </div>
@@ -527,17 +527,17 @@
                     <ul>
                       <li>
                         <i class="las la-check-circle"></i
-                        ><a href="#client">Client Portal</a>
+                        ><a href="/index1.html#client">Client Portal</a>
                       </li>
 
                       <li>
                         <i class="las la-check-circle"></i
-                        ><a href="#schedule">Schedule Appointment </a>
+                        ><a href="/index1.html#schedule">Schedule Appointment </a>
                       </li>
 
                       <li>
                         <i class="las la-check-circle"></i
-                        ><a href="#contact">Contact Us</a>
+                        ><a href="/index1.html#contact">Contact Us</a>
                       </li>
 
                       <li>
