--- a/blog2.html
+++ b/blog2.html
@@ -262,7 +262,7 @@
 
                     <div class="header-top-link text-center">
 
-                        <h4 class="text-white"> Associate Income Tax <a href="#contact">Contact Us</a></h4>
+                        <h4 class="text-white"> Associate Income Tax <a href="/index1.html#contact">Contact Us</a></h4>
 
                     </div>
 
@@ -275,13 +275,13 @@
     </div>
 
     <!-- container area -->
-    
-    <div class="container">
-    <div id="blog-container-2" class="row blog2-container">
 
-      </div>
+    <div class="container">
+        <div id="blog-container-2" class="row blog2-container">
+
+        </div>
     </div>
-<div id="pagination-container"></div>
+    <div id="pagination-container"></div>
 
 
     <!-- footer area -->
@@ -328,11 +328,13 @@
 
                                         <li><i class="las la-check-circle"></i><a href="/index1.html#home">Home</a></li>
 
-                                        <li><i class="las la-check-circle"></i><a href="/index1.html#about">About Us</a></li>
+                                        <li><i class="las la-check-circle"></i><a href="/index1.html#about">About Us</a>
+                                        </li>
 
                                         <li><i class="las la-check-circle"></i><a href="/index1.html#blog">News</a></li>
 
-                                        <li><i class="las la-check-circle"></i><a href="/index1.html#resource">Resources</a></li>
+                                        <li><i class="las la-check-circle"></i><a
+                                                href="/index1.html#resource">Resources</a></li>
 
 
 
@@ -352,13 +354,16 @@
 
 
 
-                                        <li><i class="las la-check-circle"></i><a href="/index1.html#client">Client Portal</a></li>
+                                        <li><i class="las la-check-circle"></i><a href="/index1.html#client">Client
+                                                Portal</a></li>
 
-                                        <li><i class="las la-check-circle"></i><a href="/index1.html#schedule">Schedule Appointment
+                                        <li><i class="las la-check-circle"></i><a href="/index1.html#schedule">Schedule
+                                                Appointment
 
                                             </a></li>
 
-                                        <li><i class="las la-check-circle"></i><a href="/index1.html#contact">Contact Us</a></li>
+                                        <li><i class="las la-check-circle"></i><a href="/index1.html#contact">Contact
+                                                Us</a></li>
 
                                         <li><i class="las la-check-circle"></i><a href="#">Login</a></li>
 
@@ -414,11 +419,14 @@
 
                     <div class="social-link ">
 
-                        <a href="https://www.facebook.com/aitstax/"><img src="assets/img/facebook.png"> Facebook</a>
+                        <a href="https://www.facebook.com/aitstax/"><img
+                                src="assets/img/output-onlinepngtoolsfacebook.png"> Facebook</a>
 
-                        <a href="https://www.twitter.com/aitstax/"><img src="assets/img/twitters.png"> Twitter</a>
+                        <a href="https://www.twitter.com/aitstax/"><img
+                                src="assets/img/output-onlinepngtoolstwitter.png"> Twitter</a>
 
-                        <a href="https://www.instagram.com/aitstax/"><img src="assets/img/instagrams.png"> Instagram</a>
+                        <a href="https://www.instagram.com/aitstax/"><img
+                                src="assets/img/output-onlinepngtoolsinstagram.png"> Instagram</a>
 
 
 
