update about section

--- a/about.html
+++ b/about.html
@@ -319,12 +319,13 @@
           >
             <div class="single-team-wrap">
               <div class="team-thumb">
-                <img src="assets/img/banner-img/cool-guy-sitting-chair-look-up (1)-min.png" alt="" />
+                <img src="assets/img/about-img/Bradely-daniel.png" alt="" />
               </div>
               <div class="team-details">
-                <h4>Debra</h4>
-                <h6>Tax Advisor</h6>
-                <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur</p>
+                <h4>Bradley Daniels</h4>
+                <h6>Tax Preparer</h6>
+                <p>Michael Hawkes, CPA Owner</p>
+
                 <!-- <div class="social-link">
                             <a href="#">FB</a>
                             <a href="#">TW</a>
@@ -340,12 +341,12 @@
           >
             <div class="single-team-wrap">
               <div class="team-thumb">
-                <img src="assets/img/banner-img/cool-guy-sitting-chair-look-up (1)-min.png" alt="" />
+                <img src="assets/img/about-img/Amanda.png" alt="" />
               </div>
               <div class="team-details">
-                <h4>D.A Fan</h4>
-                <h6>Advisor</h6>
-                <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur</p>
+                <h4>Amanda Rodriguez.</h4>
+                <h6>Executive Assistant / Bookkeeper</h6>
+                <!-- <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur</p> -->
                 <!-- <div class="social-link">
                             <a href="#">FB</a>
                             <a href="#">TW</a>
@@ -361,12 +362,13 @@
           >
             <div class="single-team-wrap">
               <div class="team-thumb">
-                <img src="assets/img/banner-img/cool-guy-sitting-chair-look-up (1)-min.png" alt="" />
+                <img src="assets/img/about-img/Taylor-parks.png" alt="" />
               </div>
               <div class="team-details">
-                <h4>Rio</h4>
-                <h6>Advisor</h6>
-                <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur</p>
+                <h4>Taylor Parks</h4>
+                <h6>Executive Assistant / Bookkeeper</h6>
+                <!-- <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur</p> -->
+
                 <!-- <div class="social-link">
                             <a href="#">FB</a>
                             <a href="#">TW</a>
@@ -376,69 +378,7 @@
               </div>
             </div>
           </div>
-          <div
-            class="col-xl-4 col-lg-6 col-md-6 col-12 wow fadeInLeft animated"
-            data-wow-delay="200ms"
-          >
-            <div class="single-team-wrap">
-              <div class="team-thumb">
-                <img src="assets/img/banner-img/cool-guy-sitting-chair-look-up (1)-min.png" alt="" />
-              </div>
-              <div class="team-details">
-                <h4>Loraine R.</h4>
-                <h6>Advisor</h6>
-                <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur</p>
-                <!-- <div class="social-link">
-                            <a href="#">FB</a>
-                            <a href="#">TW</a>
-                            <a href="#">LI</a>
-                            <a href="#">BE</a>
-                        </div> -->
-              </div>
-            </div>
-          </div>
-          <div
-            class="col-xl-4 col-lg-6 col-md-6 col-12 wow fadeInLeft animated"
-            data-wow-delay="400ms"
-          >
-            <div class="single-team-wrap">
-              <div class="team-thumb">
-                <img src="assets/img/banner-img/cool-guy-sitting-chair-look-up (1)-min.png" alt="" />
-              </div>
-              <div class="team-details">
-                <h4>Carlos L.</h4>
-                <h6>Advisor</h6>
-                <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur</p>
-                <!-- <div class="social-link">
-                            <a href="#">FB</a>
-                            <a href="#">TW</a>
-                            <a href="#">LI</a>
-                            <a href="#">BE</a>
-                        </div> -->
-              </div>
-            </div>
-          </div>
-          <div
-            class="col-xl-4 col-lg-6 col-md-6 col-12 wow fadeInLeft animated"
-            data-wow-delay="400ms"
-          >
-            <div class="single-team-wrap">
-              <div class="team-thumb">
-                <img src="assets/img/banner-img/cool-guy-sitting-chair-look-up (1)-min.png" alt="" />
-              </div>
-              <div class="team-details">
-                <h4>John doe</h4>
-                <h6>Advisor</h6>
-                <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur</p>
-                <!-- <div class="social-link">
-                            <a href="#">FB</a>
-                            <a href="#">TW</a>
-                            <a href="#">LI</a>
-                            <a href="#">BE</a>
-                        </div> -->
-              </div>
-            </div>
-          </div>
+          
         </div>
       </div>
     </div>
