--- a/index1.html
+++ b/index1.html
@@ -496,7 +496,8 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="card">
+                            
+                            <!-- <div class="card">
                                 <div class="card-header" id="heading1">
                                     <h5 class="mb-0 subtitle">
                                         <button class="btn btn-link" type="button" data-bs-toggle="collapse"
@@ -520,7 +521,7 @@
                                         </div>
                                     </div>
                                 </div>
-                            </div>
+                            </div> -->
                         </div>
                     </div>
                 </div>
