update about page

--- a/blog1.html
+++ b/blog1.html
@@ -484,8 +484,8 @@
                         <a href="https://www.facebook.com/aitstax/"><img
                                 src="assets/img/output-onlinepngtoolsfacebook.png"> Facebook</a>
 
-                        <a href="https://www.twitter.com/aitstax/"><img
-                                src="assets/img/output-onlinepngtoolstwitter.png"> Twitter</a>
+                        <!-- <a href="https://www.twitter.com/aitstax/"><img
+                                src="assets/img/output-onlinepngtoolstwitter.png"> Twitter</a> -->
 
                         <a href="https://www.instagram.com/aitstax/"><img
                                 src="assets/img/output-onlinepngtoolsinstagram.png"> Instagram</a>
