--- a/index1.html
+++ b/index1.html
@@ -496,7 +496,7 @@
                                     </div>
                                 </div>
                             </div>
-                            
+
                             <!-- <div class="card">
                                 <div class="card-header" id="heading1">
                                     <h5 class="mb-0 subtitle">
@@ -807,9 +807,9 @@
                         <a href="https://www.facebook.com/aitstax/">
                             <img src="assets/img/output-onlinepngtoolsfacebook.png"> Facebook
                         </a>
-                        <a href="https://www.twitter.com/aitstax/">
+                        <!-- <a href="https://www.twitter.com/aitstax/">
                             <img src="assets/img/output-onlinepngtoolstwitter.png"> Twitter
-                        </a>
+                        </a> -->
                         <a href="https://www.instagram.com/aitstax/">
                             <img src="assets/img/output-onlinepngtoolsinstagram.png"> Instagram
                         </a>
