update team name

--- a/about.html
+++ b/about.html
@@ -323,8 +323,8 @@
               <img src="assets/img/about-img/Taylor-parks.png" alt="" />
             </div>
             <div class="team-details">
-              <h4>Taylor Parks</h4>
-              <h6>Executive Assistant / Bookkeeper</h6>
+              <h4>Bradley Daniels</h4>
+              <h6>Tax Preparer</h6>
               <!-- <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur</p> -->
 
               <!-- <div class="social-link">
@@ -343,8 +343,8 @@
               <img src="assets/img/about-img/4th-image.png" alt="" />
             </div>
             <div class="team-details">
-              <h4>Taylor Parks</h4>
-              <h6>Executive Assistant / Bookkeeper</h6>
+              <h4>Ashely Cox</h4>
+              <h6>EA Tax Preparer</h6>
               <!-- <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur</p> -->
 
               <!-- <div class="social-link">
