--- a/about.html
+++ b/about.html
@@ -216,7 +216,7 @@
               </div>
             </div>
             <div class="about-left-img wow fadeInUp animated" data-wow-delay="400ms">
-              <img src="assets/img/banner-img/Untitled design (8) (1)-min.png" alt="" />
+              <img src="assets/img/client-img/about-page-lorem.jpg" alt="" />
               <!-- <a href="#">Discover More</a> -->
             </div>
           </div>
@@ -224,7 +224,7 @@
         <div class="col-xl-6 col-lg-6 col-12 wow fadeInRight animated" data-wow-delay="200ms">
           <div class="about-right-wrap">
             <div class="about-right-img">
-              <img src="assets/img/banner-img/Untitled design (9).png" alt="" />
+              <img src="assets/img/client-img/Tax-services.jpg" alt="" />
             </div>
             <p>
               There are many variations of passages of Lorem Ipsum available,
@@ -305,8 +305,8 @@
               <img src="assets/img/about-img/Amanda.png" alt="" />
             </div>
             <div class="team-details">
-              <h4>Amanda Rodriguez.</h4>
-              <h6>Executive Assistant / Bookkeeper</h6>
+              <h4>Bradley Daniels</h4>
+              <h6>Tax Preparer</h6>
               <!-- <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur</p> -->
               <!-- <div class="social-link">
                             <a href="#">FB</a>
@@ -323,8 +323,9 @@
               <img src="assets/img/about-img/Taylor-parks.png" alt="" />
             </div>
             <div class="team-details">
-              <h4>Bradley Daniels</h4>
-              <h6>Tax Preparer</h6>
+              <h4>Amanda Rodriguez.</h4>
+              <h6>Executive Assistant / Bookkeeper</h6>
+             
               <!-- <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur</p> -->
 
               <!-- <div class="social-link">
