--- a/index1.html
+++ b/index1.html
@@ -151,15 +151,15 @@
                     <div class="banner-slider" data-aos="fade-down" data-aos-duration="2000">
                         <div class="slider slider-for">
                             <div>
-                                <img src="assets/img/banner-img/depositphotos_26440035-removebg-preview.png">
+                                <img src="assets/img/client-img/New-Teacher-removebg-preview11.png">
                             </div>
 
                             <div>
                                 <img
-                                    src="assets/img/banner-img/workman-with-his-arms-crossed-white-background-min-removebg-preview.png">
+                                    src="assets/img/client-img/newconstruction-worker-removebg-preview112.png">
                             </div>
                             <div>
-                                <img src="assets/img/banner-img/Police Girl_New_Project-removebg-preview.png">
+                                <img src="assets/img/client-img/Two-polic-mens-removebg-preview.png">
                             </div>
                         </div>
                     </div>
@@ -173,7 +173,7 @@
                 <div class="col-xl-6 col-lg-6 col-12 wow fadeInLeft   animated" data-wow-delay="200ms"
                     style="visibility: visible; animation-delay: 200ms; animation-name: fadeInLeft;">
                     <div class="process-bg"
-                        style="background-image: url(assets/img/banner-img/arrangement-with-devices-copy-space\ \(1\).jpg);">
+                        style="background-image: url(assets/img/client-img/Accounting-deparmnet.jpg);">
                     </div>
                 </div>
                 <div class="col-xl-6 col-lg-6 col-12 wow fadeInUp animated" data-wow-delay="200ms"
@@ -271,7 +271,7 @@
                     <div class="col-xl-6 col-lg-6 col-12 wow fadeInLeft  animated" data-wow-delay="100ms"
                         style="visibility: visible; animation-delay: 100ms; animation-name: fadeInLeft;">
                         <div class="about-bg-one"
-                            style="background-image: url(assets/img/banner-img/businesspeople-shaking-hands-workplace\ \(1\).jpg);">
+                            style="background-image: url(assets/img/client-img/About-company.jpg);">
                             <!-- <div class="about-tag-title">
                                 <h4>Advice on optimizing retirement contributions.</h4>
                             </div> -->
@@ -345,7 +345,7 @@
                         data-aos-duration="1800"
                         style="visibility: visible; animation-delay: 200ms; animation-name: fadeInRight;">
                         <div class="about-bg-two"
-                            style="background-image: url(assets/img/banner-img/ivana-cajina-dnL6ZIpht2s-unsplash-min\ \(1\).jpg);">
+                            style="background-image: url(assets/img/client-img/Tax-services.jpg);">
                             <!-- <div class="about-tag-title">
                                 <h4>99.9% Customer Satisfaction</h4>
                             </div> -->
@@ -370,7 +370,7 @@
                     <div class="col-xl-6 col-lg-6 col-12 wow fadeInLeft  animated" data-wow-delay="100ms"
                         style="visibility: visible; animation-delay: 100ms; animation-name: fadeInLeft;">
                         <div class="about-bg-one blog-image-1"
-                            style="background-image: url(assets/img/banner-img/young-girl-showing-thumbs-up-hand-sign\ \(1\).jpg);">
+                            style="background-image: url(assets/img/client-img/Blog.jpg);">
                             <!-- <div class="about-tag-title">
                                 <h4>Earned Income Tax Credit (EITC)</h4>
                             </div> -->
@@ -400,7 +400,7 @@
                         <div class="row">
                             <div class="col-lg-12">
                                 <div class="process-bg"
-                                    style="background-image: url(assets/img/banner-img/Untitled\ design\ \(9\).png);">
+                                    style="background-image: url(assets/img/client-img/New-Resources.jpg);">
                                     <!-- <div class="process-tag-title">
                                         <h4>Comprehensive guide for personal tax filing and strategies</h4>
                                     </div> -->
@@ -585,7 +585,7 @@
                     <div class="col-xl-6 col-lg-6 col-12 wow fadeInLeft  animated" data-wow-delay="200ms"
                         style="visibility: visible; animation-delay: 200ms; animation-name: fadeInLeft;">
                         <div class="process-bg"
-                            style="background-image: url(assets/img/banner-img/business-woman.png);">
+                            style="background-image: url(assets/img/client-img/Appointment-policy.jpg);">
                             <!-- <div class="process-tag-title">
                                 <h4>Walk-ins are welcome, but availability is not guaranteed.</h4>
                             </div> -->
